fixed recipe title on card to not get too close to margin

--- a/site/src/css/Recipes.css
+++ b/site/src/css/Recipes.css
@@ -26,15 +26,17 @@
     flex-direction: column;
     height: 100%;
     border: 1px solid #ddd;
-    border-radius: 8px;
+    border-radius: 8px
 }
 
 .card-title {
+    font-weight: 600;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     text-align: left;
-    float: left
+    float: center
+
 }
 
 .card-text {
